// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon should match snapshot with all props 1`] = `
<div
  class="text-5xl primary-orange [text-shadow:0_0_20px_rgba(251,146,60,0.5)] transition-all duration-300 custom"
>
  <svg
    data-testid="test-svg"
  >
    <path />
  </svg>
</div>
`;

exports[`Icon should match snapshot with default props 1`] = `
<div
  class="text-4xl transition-all duration-300"
>
  <svg
    data-testid="test-svg"
  >
    <path />
  </svg>
</div>
`;
